_Source/force-app/main/default/objects/BI_Focus_Account__c/BI_Focus_Account__c.object-meta.xml
<CustomObject>
    <label>Focus Account</label>
    <nameField>
        <displayFormat>FA-{000000}</displayFormat>
        <label>Focus Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Focus Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>