_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Focused Objectives for the Account</relationshipLabel>
    <relationshipName>BI_Focus_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>