_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Account_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>BI_Account_Plan_Status__c</fullName>
    <formula>TEXT( BI_Account_Plan__r.BI_Status__c )</formula>
    <inlineHelpText>The status of the Account Plan that the focus record belongs to</inlineHelpText>
    <label>Account Plan Status</label>
    <type>Text</type>
</CustomField>