_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Objective__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective__c</fullName>
    <label>Objective</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must select an objective that supports Focus Accounts. To determine if an objective support focus account records, navigate to your objective and look for the Focus Account section. If it is not visible, Focus Accounts are not supported.</errorMessage>
        <filterItems>
            <field>BI_Objectives__c.BI_Focus_Accounts__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BI_Objectives__c</referenceTo>
    <relationshipLabel>Focus Accounts</relationshipLabel>
    <relationshipName>BI_Focus_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>