_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Objective_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Category__c</fullName>
    <formula>BI_Objective__r.BI_Objective_Category__r.Name</formula>
    <label>Objective Category</label>
    <type>Text</type>
</CustomField>