_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Objective_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Description__c</fullName>
    <formula>BI_Objective__r.BI_Lookup_Identifier__c</formula>
    <label>Objective Description</label>
    <type>Text</type>
</CustomField>