_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Objective_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Strategy__c</fullName>
    <label>Objective Strategy &amp; Action Plan for Acc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>