_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Objective_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Objective_Type__c</fullName>
    <formula>BI_Objective__r.BI_Objective_Type__r.Name</formula>
    <label>Objective Type</label>
    <type>Text</type>
</CustomField>