_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Related_Records_Owner_Alert__c.field-meta.xml
<CustomField>
    <fullName>BI_Related_Records_Owner_Alert__c</fullName>
    <description>Used in Lightning Page to show a warning if the Account Plan and the Objective for the Focus Account record is owned by 2 different people</description>
    <formula>IF( BI_Account_Plan__r.OwnerId  &lt;&gt;  BI_Objective__r.OwnerId,
true,
false
)</formula>
    <label>Related Records Owner Alert</label>
    <type>Checkbox</type>
</CustomField>