_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Strategy_Action_Plan_Est_Complete__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategy_Action_Plan_Est_Complete__c</fullName>
    <inlineHelpText>It is recommended to update your progress on executing your strategy &amp; action plan, by updating the estimated completion percentage as you work on this strategy throughout the year. This helps your leadership quickly assess your progress</inlineHelpText>
    <label>Strategy &amp; Action Plan - Est. % Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>