_Source/force-app/main/default/objects/BI_Focus_Account__c/fields/BI_Targeted_Programs__c.field-meta.xml
<CustomField>
    <fullName>BI_Targeted_Programs__c</fullName>
    <label>Targeted Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>